add groupId task for releaser

--- a/reactor-core/build.gradle
+++ b/reactor-core/build.gradle
@@ -83,6 +83,12 @@ dependencies {
   noMicrometerTestCompile configurations.testCompile
 }
 
+task groupId {
+  doLast {
+	println project.group
+  }
+}
+
 task downloadBaseline {
   if (project.gradle.startParameter.isOffline()) {
 	println "Offline: skipping downloading of baseline and JAPICMP"
