--- a/reactor-test/build.gradle
+++ b/reactor-test/build.gradle
@@ -31,6 +31,12 @@ dependencies {
           "org.mockito:mockito-core:$mockitoVersion"
 }
 
+task groupId {
+  doLast {
+    println project.group
+  }
+}
+
 task downloadBaseline {
   if (project.gradle.startParameter.isOffline()) {
     println "Offline: skipping downloading of baseline and JAPICMP"
